--- a/index.html
+++ b/index.html
@@ -1,47 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<title>JobTalk - CS491 Term Project</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+			crossorigin="anonymous"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,100&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="styles.css" />
+	</head>
 
-<head>
-    <title>VoiceWise - CS491 Term Project</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
+	<body>
+		<div class="container-fluid text-center p-5 bg-dark text-light">
+			<h1>JobTalk</h1>
+			<p>CS491 Term Project</p>
+		</div>
 
-<body>
-
-    <div class="container-fluid text-center p-5 bg-dark text-light">
-        <h1>VoiceWise</h1>
-        <p>CS491 Term Project</p>
-    </div>
-
-    <div class="container text-center pt-5 pb-5 bg-light h-auto">
-        <div class="row">
-          <div class="col">
-            <h3>About VoiceWise</h3>
-            <p>VoiceWise is a... Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus voluptatem error, in voluptatibus veniam ea nesciunt ullam unde sit possimus iusto, assumenda adipisci veritatis quos quas repudiandae corporis voluptates quisquam?</p>
-          </div>
-          <div class="col">
-            <h3>Our Team</h3>
-            <ul class="list-group">
-                <li class="list-group-item">Emre Uğur</li>
-                <li class="list-group-item">Tuğrul Sağlam</li>
-                <li class="list-group-item">İpek Öztaş</li>
-                <li class="list-group-item">Barış Yıldırım</li>
-                <li class="list-group-item">Elifsena Öz</li>
-              </ul>
-          </div>
-          <div class="col justify-content-center align-items-center d-flex">
-            <a href="https://github.com/Emruur/VoiceWise/">Github</a>
-          </div>
-        </div>
-      </div>
-
-</body>
-
+		<div class="container-xxl text-center pt-5 pb-5 bg-light h-auto">
+			<div class="row justify-content-center">
+				<div class="col">
+					<h3>About JobTalk</h3>
+					<p style="padding-top: 20px; padding-bottom: 30px">
+						JobTalk is a cloud-based cross-platform mobile application designed
+						for companies and startups that evaluates candidates’ performance in
+						various fields, such as sentiment analysis, language proficiency,
+						self-expression, and communication skills. The application ensures a
+						fair evaluation process for all candidates by eliminating human bias
+						through the machine learning model trained to assess candidate
+						skills regardless of appearance, background, or ethnicity.
+					</p>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col" style="display: flex; justify-content: center">
+					<div class="card" style="width: 18rem">
+						<div class="img">
+							<img
+								src="./assets/images/elif.jpeg"
+								class="card-img-top"
+								alt="elif"
+							/>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">Elifsena Öz</h5>
+							<p class="card-text">Project Planner</p>
+							<a href="#" class="btn btn-primary">GitHub</a>
+						</div>
+					</div>
+				</div>
+				<div class="col" style="display: flex; justify-content: center">
+					<div class="card" style="width: 18rem">
+						<div class="img">
+							<img
+								src="./assets/images/ipek.jpeg"
+								class="card-img-top"
+								alt="ipek"
+							/>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">İpek Öztaş</h5>
+							<p class="card-text">Test and Integration Designer</p>
+							<a href="#" class="btn btn-primary">GitHub</a>
+						</div>
+					</div>
+				</div>
+				<div class="col" style="display: flex; justify-content: center">
+					<div class="card" style="width: 18rem">
+						<div class="img">
+							<img
+								src="https://emruur.github.io/assets/profile-avatart.jpg"
+								class="card-img-top"
+								alt="emre"
+							/>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">Emre Uğur</h5>
+							<p class="card-text">Software Designer</p>
+							<a href="#" class="btn btn-primary"> GitHub </a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row justify-content-center pt-5">
+				<div class="col" style="display: flex; justify-content: center">
+					<div class="card" style="width: 18rem">
+						<div class="img">
+							<img
+								src="./assets/images/baris.jpeg"
+								class="card-img-top"
+								alt="barış"
+							/>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">Barış Yıldırım</h5>
+							<p class="card-text">System Designer</p>
+							<a href="#" class="btn btn-primary">GitHub</a>
+						</div>
+					</div>
+				</div>
+				<div class="col" style="display: flex; justify-content: center">
+					<div class="card" style="width: 18rem">
+						<div class="img">
+							<img
+								src="./assets/images/tugrul.jpeg"
+								class="card-img-top"
+								alt="tuğrul"
+							/>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">Ahmet Tuğrul Sağlam</h5>
+							<p class="card-text">Configuration Designer</p>
+							<a href="#" class="btn btn-primary">GitHub</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<div class="col justify-content-center align-items-center d-flex">
+						<a
+							class="btn btn-primary"
+							role="button"
+							href="https://github.com/Emruur/Job-Talk/"
+							>Project Github Page</a
+						>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
